assets/custom-theme.css
/* ... */
.new-list-tags.collection-nav li:hover {
  cursor: pointer;
}
.new-list-tags.collection-nav li:hover span.checkmark {
  background-color: #ccc;
}
.new-list-tags.collection-nav li.collection-nav--active label {
  font-weight: bold;
}
@media screen and (max-width: 768px) {
  .new-list-tags.collection-nav {
    max-height: initial;
    height: auto;
    margin-bottom: 78px;
  }
}
.mobile-view.bg-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 101;
  opacity: 0;
  visibility: hidden;
  transition: all 0.2s ease-in-out;
}
.mobile-view.bg-backdrop .list-container {
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
  margin-bottom: 0;
  height: 40vh;
  background-color: #ffffff;
  border-radius: 10px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  padding: 10px 20px 0 20px;
  margin-bottom: -40vh;
  transition: all 0.2s ease-in-out;
  display: flex;
  flex-flow: column;
}
.mobile-view.bg-backdrop .list-container h5 {
  text-align: center;
  margin-bottom: 0;
}
.mobile-view.bg-backdrop .list-container span.button-up {
  display: block;
  max-height: 21px;
  height: 100%;
  width: 25px;
  background-color: #ffffff;
  margin: 0 auto;
  position: relative;
  cursor: pointer;
}
.mobile-view.bg-backdrop .list-container span.button-up:after {
  content: "";
  position: absolute;
  left: 7px;
  z-index: 11;
  display: block;
  width: 10px;
  height: 10px;
  border-top: 2px solid #afaeae;
  border-left: 2px solid #afaeae;
  transform: rotate(45deg);
  top: 10px;
}
.mobile-view.bg-backdrop .collection-nav--footer {
  position: absolute;
  right: 0;
  left: 0;
  bottom: 0px;
  padding: 20px 10px;
  text-align: center;
  background-color: #ffffff;
}
.mobile-view.bg-backdrop.show {
  visibility: visible;
  opacity: 1;
}
.mobile-view.bg-backdrop.show .list-container {
  margin-bottom: 0;
}
@media screen and (min-width: 769px) {
  .mobile-view {
    display: none;
  }
}
@media screen and (max-width: 768px) {
  .desktop-view {
    display: none;
  }
  #collectionFilters.grid__item {
    min-height: initial;
  }
}
#toggleFilters span {
  font-size: 9px;
}
#toggleFilters img {
  margin: 0 auto;
}
.collection-nav--child > li > a.aura-botanica {
  border-left: 3px solid #612321 !important;
}
.collection-nav--child > li > a.chronologiste {
  border-left: 3px solid #1B1418 !important;
}
.collection-nav--child > li > a.densifique {
  border-left: 3px solid #D8D8D8 !important;
}
.collection-nav--child > li > a.discipline {
  border-left: 3px solid #E79B89 !important;
}
.collection-nav--child > li > a.elixir-ultime {
  border-left: 3px solid #DA8600 !important;
}
.collection-nav--child > li > a.nutritive {
  border-left: 3px solid #EE4D1D !important;
}
.collection-nav--child > li > a.reflection {
  border-left: 3px solid #C9228D !important;
}
.collection-nav--child > li > a.resistance {
  border-left: 3px solid #249C9E !important;
}
.collection-nav--child > li > a.specifique,
.collection-nav--child > li > a.sp\e9 cifique {
  border-left: 3px solid #D40017 !important;
}
.collection-nav--child > li > a.specifique,
.collection-nav--child > li > a.genesis {
  border-left: 3px solid #F7EEF0 !important;
}
.collection-nav--child > li > a.specifique,
.collection-nav--child > li > a.blond-absolu {
  border-left: 3px solid #8386DD !important;
}
.collection-nav--child > li > a.chroma-absolu {
  border-left: 3px solid #D49DA4 !important;
}
.collection-nav--child > li > a.curl-manifesto {
  border-left: 3px solid #F1C5A5 !important;
}
.product-grid-item .figcaption.under {
  min-height: 140px;
  max-height: 180px;
}
.thick-underline {
  border-bottom: 2px solid #333;
}
.collection-brand-image {
  margin-bottom: 1.5em;
}
.collection-branded .brand-logo {
  margin-bottom: 2em;
  margin-top: 0.5em;
  max-width: 85%;
}
.collection-branded .page_header__subtitle {
  margin-bottom: 2em;
}
.collection-branded .brand-featured-text {
  margin-bottom: 2.5em;
}
.collection-branded .brand-featured-text p {
  font-size: 14px !important;
}
.collection-branded .best-sellers .section-header,
.collection-branded .new-arrivals .section-header {
  margin-bottom: 0;
}
.collection-branded .section-header__title,
.collection-branded .section-title,
.collection-branded .featured-collection__title,
.collection-branded .discover-collection__title {
  font-family:
    "Playfair Display",
    "Lato",
    "Helvetica",
    sans-serif;
}
.collection-branded h1,
.collection-branded h2,
.collection-branded h3,
.collection-branded h4,
.collection-branded h5,
.collection-branded h6,
.collection-branded-subcollection h1,
.collection-branded-subcollection h2,
.collection-branded-subcollection h3,
.collection-branded-subcollection h4,
.collection-branded-subcollection h5,
.collection-branded-subcollection h6 {
  font-family:
    "Playfair Display",
    "Lato",
    "Helvetica",
    sans-serif;
}
.collection-branded .grid.custom-section {
  padding: 1em 0;
}
.collection-branded .grid.custom-section.full-width {
  padding-top: 0;
}
.collection-branded .custom-section.full-width .section-header {
  margin-bottom: 2rem;
}
.collection-branded .page-margin {
  padding-top: 0;
}
.collection-branded .featured-collection a,
.collection-branded .discover-collection a {
  text-decoration: none;
}
.collection-branded .featured-collection__title,
.collection-branded .discover-collection__title {
  margin-top: 15px;
  margin-bottom: 0;
  font-size: 1.15em;
}
.collection-branded .featured-collection__subtitle,
.collection-branded .discover-collection__subtitle {
  font-size: 14px;
  margin: 0 0 15px;
}
.collection-branded .collection-sidebar hr {
  display: block;
  border-top: solid rgba(156, 154, 154, 0.2);
}
.grid.normalised-product-name-height .name_wrapper {
  min-height: 57px;
}
.collection-branded-subcollection .product-grid-item .name_wrapper,
.collection-branded .product-grid-item .name_wrapper {
  letter-spacing: 0;
  font-size: 14px;
}
/* ... */

